PR(REFAC): Rename `client schema add` to `client collection add`
